base/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-toolkit
spec:
  template:
    spec:
      containers:
      - name: devops-toolkit
        image: vfarcic/devops-toolkit-series:2.7.0
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
