base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: devops-toolkit
    type: silly
  namespace: a-team
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: devops-toolkit
            port:
              number: 80
    host: devopstoolkitseries.com
